@@ -33,6 +33,7 @@ enum MalagaSymbol {
 	MS_CLASS,
 	MS_PERUSMUOTO,
 	MS_NUMBER,
+	MS_PERSON,
 	MS_LAST_SYMBOL
 };
 
@@ -59,6 +60,7 @@ class MalagaAnalyzer : public Analyzer {
 		void parseClass(Analysis * &analysis, malaga::value_t &result) const;
 		void parsePerusmuoto(Analysis * &analysis, malaga::value_t &result) const;
 		void parseNumber(Analysis * &analysis, malaga::value_t &result) const;
+		void parsePerson(Analysis * &analysis, malaga::value_t &result) const;
 		wchar_t * parseBaseform(wchar_t * &perusmuoto, const wchar_t * structure) const;
 		wchar_t * parseAttributeFromPerusmuoto(wchar_t * &perusmuoto, wchar_t id) const;
 		void initSymbols();
@@ -68,6 +70,7 @@ class MalagaAnalyzer : public Analyzer {
 		std::map<malaga::symbol_t, const wchar_t *> sijamuotoMap;
 		std::map<malaga::symbol_t, const wchar_t *> classMap;
 		std::map<malaga::symbol_t, const wchar_t *> numberMap;
+		std::map<malaga::symbol_t, const wchar_t *> personMap;
 };
 
 } }
